# vibecad

./: DEMO_SCRIPT.md  IMPLEMENTATION_SUMMARY.md  README.md  updates.md
.github/workflows/: ci.yml
backend/: docker-compose.yml
backend/ai-server/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/ai-server/src/: config.ts  index.ts  types.ts
backend/ai-server/tests/: llm.test.ts
backend/cad-server/: build.sh  pyproject.toml
backend/cad-server/executor/src/: inspector.py  runner.py
backend/cad-server/server/: Dockerfile
backend/cad-server/server/src/: executor.py  main.py
backend/cad-server/src/: dim_views.py  executor.py  main.py  params.py  png_snapshot.py  snapshot.py
backend/cad-server/tests/: test_server.py
docs/: supabase_migration_v2.sql  supabase_migration_v3.sql  supabase_migration_v4.sql  supabase_migration_v5.sql  supabase_schema.sql  web3auth.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  client.tsx  index.css
frontend/src/config/: web3auth.ts
frontend/src/design/: tokens.ts
frontend/src/hooks/: useAppStore.ts  useAuth.ts  useChatSessions.ts  useGeneration.ts  useModelStorage.ts  usePanelLayout.ts  useParamUpdate.ts  useViewPresets.ts
frontend/src/lib/: constants.ts  imageUtils.ts
frontend/src/pages/: HomePage.tsx
tests/: conftest.py
tests/integration/: test_ai_server.py  test_all_features.js  test_cad_server.py  test_comprehensive.js  test_pipeline.py  test_vision_and_edit.js
tests/unit/: test_params.py
(+55 files in other folders)
